fix get handlers, add date params
