# docs/swagger.json
@@ -55,7 +55,7 @@
         },
         "/api/v1/schedule/courses": {
             "get": {
-                "description": "Курсы факультета",
+                "description": "Курсы факультета. Фильтрует по наличию занятий в диапазоне ±6 месяцев от date. По умолчанию date = текущий день",
                 "tags": [
                     "Courses"
                 ],
@@ -74,6 +74,13 @@
                         "name": "faculty",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "2025-01-08",
+                        "description": "date",
+                        "name": "date",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -152,7 +159,7 @@
         },
         "/api/v1/schedule/faculties/course": {
             "get": {
-                "description": "Факультеты курса",
+                "description": "Факультеты курса. Фильтрует по наличию занятий в диапазоне ±6 месяцев от date. По умолчанию date = текущий день",
                 "tags": [
                     "Faculties"
                 ],
@@ -172,6 +179,13 @@
                         "name": "course",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "2025-01-08",
+                        "description": "date",
+                        "name": "date",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -198,11 +212,20 @@
         },
         "/api/v1/schedule/faculties/courses": {
             "get": {
-                "description": "Факультеты с курсами",
+                "description": "Факультеты с курсами. Фильтрует по наличию занятий в диапазоне ±6 месяцев от date. По умолчанию date = текущий день",
                 "tags": [
                     "Faculties"
                 ],
                 "summary": "Get faculties with courses",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "2025-01-08",
+                        "description": "date",
+                        "name": "date",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -230,7 +253,7 @@
         },
         "/api/v1/schedule/groups": {
             "get": {
-                "description": "Группы факультета курса",
+                "description": "Группы факультета курса. Фильтрует по наличию занятий в диапазоне ±6 месяцев от date. По умолчанию date = текущий день",
                 "tags": [
                     "Groups"
                 ],
@@ -248,7 +271,8 @@
                         "type": "integer",
                         "description": "course",
                         "name": "course",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "enum": [
@@ -261,6 +285,14 @@
                         "type": "string",
                         "description": "faculty",
                         "name": "faculty",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "example": "2025-01-08",
+                        "description": "date",
+                        "name": "date",
                         "in": "query"
                     }
                 ],
@@ -272,6 +304,12 @@
                             "items": {
                                 "$ref": "#/definitions/github_com_schedule-rsreu_schedule-api_internal_models.CourseFacultyGroups"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
                         }
                     },
                     "404": {
